<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Approyec</string>
    <string name="acercade">acerca de...</string>
    <string name="salir">salir</string>
    <string name="codigo">codigo</string>
    <string name="marca">marca</string>
    <string name="año">año</string>
    <string name="modelo">modelo</string>
    <string name="color">color</string>
    <string name="descripcion">descrpcion</string>
    <string name="registar">registrar</string>
    <string name="modificar">modificar</string>
    <string name="buscar">buscar</string>
    <string name="eliminar">eliminar</string>
    <string name="limpiar">limpiar</string>
    <string name="title_activity_acerca">acerca</string>
    <string name="hello_world">Hello world!</string>
    <string name="nombre">juan daniel mancilla higuera</string>
    <string name="numcontrlo">11930079</string>

</resources>
