<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".principal" android:orientation="vertical">

    <TextView android:text="@string/codigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/cod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView android:text="@string/marca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/mar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView android:text="@string/año"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/añ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView android:text="@string/modelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/mod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView android:text="@string/color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/col"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView android:text="@string/descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/registrar"
            android:text="@string/registar"
            android:onClick="alta">
        </Button>


        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/modificar"
            android:text="@string/modificar"
            android:onClick="modificacion">
        </Button>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/buscar"
            android:text="@string/buscar"
            android:onClick="consulta">
        </Button>


        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/eliminar"
            android:text="@string/eliminar"
            android:onClick="baja">
        </Button>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/limpiar"
            android:text="@string/limpiar"
            android:onClick="limpia">
        </Button>
    </LinearLayout>
</LinearLayout>

</ScrollView>